# Consensus-Made-Simple

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: Target.cmake
src/: CMakeLists.txt  build.cc
